[gd_scene load_steps=26 format=2]

[ext_resource path="res://zones/mountain/stage_05.gd" type="Script" id=1]
[ext_resource path="res://assets/tileset_mountain.tres" type="TileSet" id=2]
[ext_resource path="res://props/trees/snow_tree_1.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/camera.gd" type="Script" id=4]
[ext_resource path="res://props/chrystal/chrystal.tscn" type="PackedScene" id=5]
[ext_resource path="res://props/forest_spirit/forest_spirit.tscn" type="PackedScene" id=6]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://props/snow_particles/snow_particles.tscn" type="PackedScene" id=8]
[ext_resource path="res://props/wolf_shadow/wolf_shadow.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sfx/wolf_shadow.wav" type="AudioStream" id=10]
[ext_resource path="res://props/backgrounds/mountain_parallax_background.tscn" type="PackedScene" id=11]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment()
{
	vec2 uv = UV;
	uv.y += TIME;
	COLOR = texture( TEXTURE, uv );
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="OpenSimplexNoise" id=3]
seed = 87658658
octaves = 6
period = 9.5
persistence = 0.0
lacunarity = 0.58

[sub_resource type="NoiseTexture" id=4]
width = 256
height = 256
seamless = true
noise = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 52 )

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 18.0497, -97.4002, -18.0497, 97.4002, 200, -40, 33.7154, 0.34056, -33.7154, -0.34056, 88, 68, 30.3098, -1.02168, -30.3098, 1.02168, 44, 96 )
}

[sub_resource type="Animation" id=7]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("forest_spirit:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "start"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("forest_spirit:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 228.01 ]
}

[sub_resource type="Animation" id=9]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../cutscenes/wolf_bg:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../mountain:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../mountain_foreground:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "start"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.564706 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../cutscenes/wolf_bg:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../mountain:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../mountain_foreground:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 4, 60 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 4, 40 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 40, 8 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 4, 60 )

[node name="stage_05" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="mountain_background" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( 589832, 3, 0, 589833, 3, 3, 589834, 3, 3, 589835, 3, 2, 589836, 3, 4, 655368, 3, 196608, 655369, 3, 65537, 655370, 3, 65537, 655371, 3, 131075, 655372, 3, 131076, 720903, 3, 0, 720904, 3, 65542, 720905, 3, 65537, 720906, 3, 196609, 720907, 3, 5, 720908, 3, 262148, 786439, 3, 131072, 786440, 3, 65537, 786441, 3, 65537, 786442, 3, 65537, 786443, 3, 131076, 786451, 3, 0, 786452, 3, 0, 786453, 3, 4, 851975, 3, 196608, 851976, 3, 65537, 851977, 3, 5, 851978, 3, 262145, 851979, 3, 262148, 851988, 3, 196608, 851989, 3, 196612, 917511, 3, 262144, 917512, 3, 262146, 917513, 3, 262148, 917524, 3, 196608, 917525, 3, 65540, 983060, 3, 196608, 983061, 3, 65541, 983062, 3, 1, 983063, 3, 4, 1048596, 3, 196608, 1048597, 3, 65537, 1048598, 3, 65537, 1048599, 3, 196612, 1114132, 3, 131072, 1114133, 3, 65538, 1114134, 3, 65537, 1114135, 3, 65540, 1179668, 3, 196608, 1179669, 3, 65537, 1179670, 3, 65537, 1179671, 3, 65540, 1245204, 3, 65536, 1245205, 3, 65537, 1245206, 3, 65537, 1245207, 3, 196612, 1310740, 3, 262144, 1310741, 3, 262147, 1310742, 3, 262146, 1310743, 3, 262148, 1310744, 3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="background_props" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="snow_tree_1_" parent="background_props" instance=ExtResource( 3 )]
position = Vector2( 104, 80 )

[node name="enemies" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 120, 68 )
current = true
process_mode = 0
limit_smoothed = true
smoothing_enabled = true
editor_draw_screen = false
editor_draw_limits = true
script = ExtResource( 4 )

[node name="chrystal" parent="." instance=ExtResource( 5 )]
position = Vector2( 160, 80 )
type = 1

[node name="cutscenes" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="wolf_bg" type="Polygon2D" parent="cutscenes"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 2 )
position = Vector2( 0, -36 )
texture = SubResource( 4 )
polygon = PoolVector2Array( -8, 0, 248, 0, 248, 176, -8, 176 )

[node name="start_cutscene_area" type="Area2D" parent="cutscenes"]
position = Vector2( 28, 60 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="cutscenes/start_cutscene_area"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="spirit_path" type="Path2D" parent="cutscenes"]
curve = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="PathFollow2D" type="PathFollow2D" parent="cutscenes/spirit_path"]
position = Vector2( 200, -40 )
rotate = false
cubic_interp = false
loop = false

[node name="path_anim" type="AnimationPlayer" parent="cutscenes/spirit_path/PathFollow2D"]
autoplay = "default"
anims/default = SubResource( 7 )
anims/start = SubResource( 8 )

[node name="forest_spirit" parent="cutscenes/spirit_path/PathFollow2D" instance=ExtResource( 6 )]
visible = false

[node name="player" parent="." instance=ExtResource( 7 )]
position = Vector2( -276, 132 )

[node name="snow_particles" parent="player" instance=ExtResource( 8 )]
position = Vector2( 0, -140 )

[node name="test_wolf_shadow" parent="player" instance=ExtResource( 9 )]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( -16, -32 )

[node name="wolf_shadow_anim" type="AnimationPlayer" parent="player/test_wolf_shadow"]
autoplay = "default"
anims/default = SubResource( 9 )
anims/start = SubResource( 10 )

[node name="shadow_sfx" type="AudioStreamPlayer" parent="player/test_wolf_shadow"]
stream = ExtResource( 10 )
bus = "sfx"

[node name="blocks" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="mountain" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
cell_y_sort = true
collision_bounce = 0.2
format = 1
tile_data = PoolIntArray( -131077, 0, 0, -131076, 0, 1, -131075, 0, 3, -131074, 0, 1, -131073, 0, 1, -196608, 0, 3, -196607, 0, 1, -196606, 0, 3, -196605, 0, 3, -196604, 0, 3, -196603, 0, 2, -196602, 0, 2, -196601, 0, 2, -196600, 0, 2, -196599, 0, 2, -196598, 0, 1, -196597, 0, 2, -196596, 0, 1, -196595, 0, 2, -196594, 0, 2, -196593, 0, 2, -196592, 0, 2, -196591, 0, 2, -196590, 0, 2, -196589, 0, 2, -196588, 0, 3, -196587, 0, 1, -196586, 0, 3, -196585, 0, 2, -196584, 0, 1, -196583, 0, 1, -196582, 0, 3, -196581, 0, 1, -196580, 0, 1, -196579, 0, 3, -196578, 0, 3, -196577, 0, 3, -196576, 0, 1, -196575, 0, 1, -196574, 0, 2, -196573, 0, 4, -65541, 0, 196608, -65540, 0, 5, -65539, 0, 262145, -65538, 0, 262145, -65537, 0, 262147, -131072, 0, 262145, -131071, 0, 262145, -131070, 0, 262147, -131069, 0, 262146, -131068, 0, 262146, -131067, 0, 262146, -131066, 0, 262145, -131065, 0, 262145, -131064, 0, 262145, -131063, 0, 262145, -131062, 0, 262147, -131061, 0, 262146, -131060, 0, 262145, -131059, 0, 262147, -131058, 0, 262146, -131057, 0, 262145, -131056, 0, 262145, -131055, 0, 262145, -131054, 0, 262145, -131053, 0, 262145, -131052, 0, 262146, -131051, 0, 262147, -131050, 0, 262145, -131049, 0, 262145, -131048, 0, 262145, -131047, 0, 262145, -131046, 0, 262147, -131045, 0, 262145, -131044, 0, 262147, -131043, 0, 262147, -131042, 0, 262147, -131041, 0, 6, -131040, 0, 131075, -131039, 0, 65537, -131038, 0, 65537, -131037, 0, 196612, -5, 0, 131072, -4, 0, 65540, -65505, 0, 131072, -65504, 0, 131073, -65503, 0, 65537, -65502, 0, 65537, -65501, 0, 196612, 65531, 0, 131072, 65532, 0, 196612, 31, 0, 65536, 32, 0, 65537, 33, 0, 65537, 34, 0, 65537, 35, 0, 196612, 131067, 0, 196608, 131068, 0, 65540, 65567, 0, 65536, 65568, 0, 65537, 65569, 0, 65537, 65570, 0, 65537, 65571, 0, 131076, 196603, 0, 196608, 196604, 0, 196612, 131103, 0, 131072, 131104, 0, 196610, 131105, 0, 65537, 131106, 0, 65537, 131107, 0, 196612, 262139, 0, 131072, 262140, 0, 196612, 196639, 0, 196608, 196640, 0, 196609, 196641, 0, 131073, 196642, 0, 65537, 196643, 0, 131076, 327675, 0, 131072, 327676, 0, 196612, 262175, 0, 196608, 262176, 0, 196609, 262177, 0, 65537, 262178, 0, 131075, 262179, 0, 65540, 393211, 0, 196608, 393212, 0, 131076, 327711, 0, 196608, 327712, 0, 65537, 327713, 0, 65537, 327714, 0, 65537, 327715, 0, 131076, 458747, 0, 65536, 458748, 0, 196612, 393247, 0, 131072, 393248, 0, 65537, 393249, 0, 196609, 393250, 0, 65537, 393251, 0, 65540, 524283, 0, 65536, 524284, 0, 131076, 458783, 0, 65536, 458784, 0, 65537, 458785, 0, 65537, 458786, 0, 65537, 458787, 0, 65540, 589819, 0, 196608, 589820, 0, 65540, 524319, 0, 196608, 524320, 0, 131075, 524321, 0, 196609, 524322, 0, 65537, 524323, 0, 196612, 655355, 0, 65536, 655356, 0, 65540, 589855, 0, 196608, 589856, 0, 65537, 589857, 0, 65537, 589858, 0, 65539, 589859, 0, 131076, 720891, 0, 131072, 720892, 0, 131076, 655370, 0, 0, 655371, 0, 2, 655372, 0, 1, 655373, 0, 2, 655374, 0, 1, 655375, 0, 1, 655376, 0, 2, 655377, 0, 2, 655378, 0, 3, 655379, 0, 3, 655380, 0, 2, 655381, 0, 2, 655382, 0, 4, 655391, 0, 131072, 655392, 0, 65537, 655393, 0, 65537, 655394, 0, 65537, 655395, 0, 65540, 786427, 0, 131072, 786428, 0, 131076, 720906, 0, 131072, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 131074, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65539, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 131076, 720927, 0, 196608, 720928, 0, 65537, 720929, 0, 65539, 720930, 0, 65538, 720931, 0, 65540, 851963, 0, 65536, 851964, 0, 196612, 786440, 0, 0, 786441, 0, 3, 786442, 0, 65542, 786443, 0, 65539, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 131075, 786447, 0, 196609, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 5, 786453, 0, 262145, 786454, 0, 262148, 786463, 0, 131072, 786464, 0, 65537, 786465, 0, 65537, 786466, 0, 65538, 786467, 0, 65540, 917499, 0, 196608, 917500, 0, 65540, 851976, 0, 196608, 851977, 0, 65537, 851978, 0, 131073, 851979, 0, 65537, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 131073, 851985, 0, 65539, 851986, 0, 196611, 851987, 0, 65537, 851988, 0, 65540, 851999, 0, 131072, 852000, 0, 65537, 852001, 0, 65537, 852002, 0, 65537, 852003, 0, 65540, 983035, 0, 65536, 983036, 0, 65541, 983037, 0, 1, 983038, 0, 1, 983039, 0, 3, 917504, 0, 1, 917505, 0, 1, 917506, 0, 2, 917507, 0, 3, 917508, 0, 3, 917509, 0, 2, 917510, 0, 2, 917511, 0, 3, 917512, 0, 65542, 917513, 0, 65537, 917514, 0, 65537, 917515, 0, 196610, 917516, 0, 131073, 917517, 0, 65537, 917518, 0, 65537, 917519, 0, 65537, 917520, 0, 65537, 917521, 0, 65537, 917522, 0, 65537, 917523, 0, 65537, 917524, 0, 196612, 917535, 0, 131072, 917536, 0, 65537, 917537, 0, 65537, 917538, 0, 65537, 917539, 0, 196612, 1048571, 0, 262144, 1048572, 0, 262147, 1048573, 0, 6, 1048574, 0, 65537, 1048575, 0, 65539, 983040, 0, 131075, 983041, 0, 65537, 983042, 0, 65537, 983043, 0, 65537, 983044, 0, 65537, 983045, 0, 65537, 983046, 0, 65537, 983047, 0, 65537, 983048, 0, 65537, 983049, 0, 65537, 983050, 0, 65537, 983051, 0, 65537, 983052, 0, 65537, 983053, 0, 65537, 983054, 0, 65537, 983055, 0, 196609, 983056, 0, 65537, 983057, 0, 65537, 983058, 0, 65537, 983059, 0, 131073, 983060, 0, 131076, 983071, 0, 65536, 983072, 0, 65537, 983073, 0, 65537, 983074, 0, 65539, 983075, 0, 196612, 1114109, 0, 65536, 1114110, 0, 65537, 1114111, 0, 65537, 1048576, 0, 196611, 1048577, 0, 65537, 1048578, 0, 65537, 1048579, 0, 65537, 1048580, 0, 65537, 1048581, 0, 65537, 1048582, 0, 65537, 1048583, 0, 65537, 1048584, 0, 65537, 1048585, 0, 65537, 1048586, 0, 131073, 1048587, 0, 65537, 1048588, 0, 65537, 1048589, 0, 65537, 1048590, 0, 196610, 1048591, 0, 65537, 1048592, 0, 65537, 1048593, 0, 65537, 1048594, 0, 65537, 1048595, 0, 131074, 1048596, 0, 196612, 1048607, 0, 196608, 1048608, 0, 65537, 1048609, 0, 65537, 1048610, 0, 65537, 1048611, 0, 65540, 1179645, 0, 65536, 1179646, 0, 65537, 1179647, 0, 65537, 1114112, 0, 65537, 1114113, 0, 131074, 1114114, 0, 65537, 1114115, 0, 65537, 1114116, 0, 65537, 1114117, 0, 196609, 1114118, 0, 65537, 1114119, 0, 65537, 1114120, 0, 65538, 1114121, 0, 65537, 1114122, 0, 65537, 1114123, 0, 65537, 1114124, 0, 65537, 1114125, 0, 65537, 1114126, 0, 65537, 1114127, 0, 65537, 1114128, 0, 65537, 1114129, 0, 65537, 1114130, 0, 65537, 1114131, 0, 65537, 1114132, 0, 131076, 1114143, 0, 131072, 1114144, 0, 65537, 1114145, 0, 65537, 1114146, 0, 65537, 1114147, 0, 196612, 1245181, 0, 65536, 1245182, 0, 65537, 1245183, 0, 65537, 1179648, 0, 65537, 1179649, 0, 65537, 1179650, 0, 131074, 1179651, 0, 65537, 1179652, 0, 65537, 1179653, 0, 65537, 1179654, 0, 131074, 1179655, 0, 65537, 1179656, 0, 65537, 1179657, 0, 65537, 1179658, 0, 65537, 1179659, 0, 65537, 1179660, 0, 65537, 1179661, 0, 65537, 1179662, 0, 65537, 1179663, 0, 65537, 1179664, 0, 65537, 1179665, 0, 65537, 1179666, 0, 65537, 1179667, 0, 65537, 1179668, 0, 65540, 1179679, 0, 196608, 1179680, 0, 65537, 1179681, 0, 65537, 1179682, 0, 65537, 1179683, 0, 65540, 1310717, 0, 196608, 1310718, 0, 65537, 1310719, 0, 65537, 1245184, 0, 65537, 1245185, 0, 65537, 1245186, 0, 131074, 1245187, 0, 65537, 1245188, 0, 65537, 1245189, 0, 65537, 1245190, 0, 65538, 1245191, 0, 65537, 1245192, 0, 65537, 1245193, 0, 65538, 1245194, 0, 65537, 1245195, 0, 65537, 1245196, 0, 65537, 1245197, 0, 65537, 1245198, 0, 65537, 1245199, 0, 65537, 1245200, 0, 65537, 1245201, 0, 65537, 1245202, 0, 65537, 1245203, 0, 65537, 1245204, 0, 65540, 1245215, 0, 65536, 1245216, 0, 65537, 1245217, 0, 65537, 1245218, 0, 65537, 1245219, 0, 196612, 1376253, 0, 131072, 1376254, 0, 65537, 1376255, 0, 65537, 1310720, 0, 65537, 1310721, 0, 65539, 1310722, 0, 65537, 1310723, 0, 65537, 1310724, 0, 65537, 1310725, 0, 65537, 1310726, 0, 65537, 1310727, 0, 65537, 1310728, 0, 65537, 1310729, 0, 65537, 1310730, 0, 65537, 1310731, 0, 65537, 1310732, 0, 65537, 1310733, 0, 65537, 1310734, 0, 65537, 1310735, 0, 131075, 1310736, 0, 65537, 1310737, 0, 196610, 1310738, 0, 65537, 1310739, 0, 65537, 1310740, 0, 65541, 1310741, 0, 2, 1310742, 0, 3, 1310743, 0, 3, 1310744, 0, 1, 1310745, 0, 3, 1310746, 0, 3, 1310747, 0, 3, 1310748, 0, 2, 1310749, 0, 2, 1310750, 0, 3, 1310751, 0, 65542, 1310752, 0, 65537, 1310753, 0, 65537, 1310754, 0, 65537, 1310755, 0, 65540, 1441789, 0, 262144, 1441790, 0, 262145, 1441791, 0, 262146, 1376256, 0, 262146, 1376257, 0, 262146, 1376258, 0, 262147, 1376259, 0, 262147, 1376260, 0, 262147, 1376261, 0, 262147, 1376262, 0, 262146, 1376263, 0, 262146, 1376264, 0, 262145, 1376265, 0, 262145, 1376266, 0, 262147, 1376267, 0, 262145, 1376268, 0, 262146, 1376269, 0, 262146, 1376270, 0, 262147, 1376271, 0, 262147, 1376272, 0, 262145, 1376273, 0, 262147, 1376274, 0, 262147, 1376275, 0, 262146, 1376276, 0, 262146, 1376277, 0, 262146, 1376278, 0, 262145, 1376279, 0, 262147, 1376280, 0, 262147, 1376281, 0, 262147, 1376282, 0, 262146, 1376283, 0, 262145, 1376284, 0, 262147, 1376285, 0, 262147, 1376286, 0, 262145, 1376287, 0, 262147, 1376288, 0, 262146, 1376289, 0, 262146, 1376290, 0, 262146, 1376291, 0, 262148 )
__meta__ = {
"_edit_lock_": true
}

[node name="mountain_foreground" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( 589834, 1, 6, 589835, 1, 4, 589837, 1, 1, 589841, 1, 1, 589843, 1, 0, 589844, 1, 4, 589845, 1, 3, 720905, 1, 1, 851969, 1, 5, 851970, 1, 1, 983061, 3, 0, 983062, 3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="camera_limit_NW" type="Position2D" parent="."]
position = Vector2( -4, -4 )

[node name="camera_limit_SE" type="Position2D" parent="."]
position = Vector2( 244, 140 )

[node name="starting_position" type="Area2D" parent="."]
position = Vector2( 4, 112 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="starting_position"]
position = Vector2( -20, -60 )
shape = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="finish_position" type="Area2D" parent="."]
position = Vector2( 248, 40 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="finish_position"]
position = Vector2( 20, -40 )
shape = SubResource( 12 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="death" type="Area2D" parent="."]
position = Vector2( 208, 156 )
monitoring = false
collision_layer = 256
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="death"]
shape = SubResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="wolf_shadow_area" type="Area2D" parent="."]
position = Vector2( 120, 36 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="wolf_shadow_area"]
shape = SubResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="mountain_parallax_background" parent="." instance=ExtResource( 11 )]
offset = Vector2( 0, 64 )
transform = Transform2D( 1, 0, 0, 1, 0, 64 )
scroll_base_offset = Vector2( 0, 512 )
